--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -1,6 +1,6 @@
 @import "bootstrap";
 @import "font-awesome";
-@import "bootstrap-social.less";
+@import (less) "bootstrap-social.less";
 
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
@@ -14,6 +14,7 @@
 
 // Calendar
 @import "calendar.less";
+@import "fullcalendar.less";
 
 // Site overrides
 @import "custom.less";
