--- a/simply_posted_portal/templates/account/schedule.html
+++ b/simply_posted_portal/templates/account/schedule.html
@@ -57,6 +57,7 @@
             </div>
         </div>
     </div>
+<div id="calendar"></div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
 {% endblock %}
