fix typo in template

--- a/simply_posted_portal/templates/account/social.html
+++ b/simply_posted_portal/templates/account/social.html
@@ -54,7 +54,7 @@
                 </a>
             {% else %}
                 <a href="{% url 'social:begin' 'pinterest' %}" class="btn btn-block btn-social btn-pinterest">
-                    <span class="fa fa-pinterest"></span> Link your Pintrest Account
+                    <span class="fa fa-pinterest"></span> Link your Pinterest Account
                 </a>
             {% endif %}
         </div>
