--- a/simply_posted_portal/templates/account/schedule.html
+++ b/simply_posted_portal/templates/account/schedule.html
@@ -16,8 +16,24 @@
 {% block head_title %}{% trans "Calendar" %}{% endblock %}
 
 {% block body %}
-    <h2><small>Manage your social media publications for {{ date|date:"F Y" }}</small></h2>
     <div id="calendar"></div>
+
+    <div class="modal fade" id="support-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+          <div class="modal-body">
+            Please contact support
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
 {% endblock %}
