--- a/simply_posted_portal/templates/account/schedule.html
+++ b/simply_posted_portal/templates/account/schedule.html
@@ -16,6 +16,7 @@
 {% block head_title %}{% trans "Calendar" %}{% endblock %}
 
 {% block body %}
+    <div class="clearfix" style="margin-bottom:20px;"><button class="btn btn-primary pull-right js-get-posts">Get New Posts</button></div>
     <div id="calendar"></div>
 
     <div class="modal fade" id="support-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
